Added a test client written in python
