# nodejs-server-server/controllers/Sensor.js
@@ -4,6 +4,6 @@ var url = require('url');
 
 var Sensor = require('./SensorService');
 
-module.exports.updatePetWithForm = function updatePetWithForm (req, res, next) {
-  Sensor.updatePetWithForm(req.swagger.params, res, next);
+module.exports.allMeasurements = function allMeasurements (req, res, next) {
+  Sensor.allMeasurements(req.swagger.params, res, next);
 };
